1. Проверить список и получить первый элемент.